[package]
name = "pallet-lockdrop"
version = "3.0.0-dev"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "A generic lockdrop module."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-system/std",
	"frame-support/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
